[CHK-385] Add API to get information about a transaction (#18)
* style(transactionsservice): reformat file

* feat: add skeleton for `getTransactionInfo` API

* docs(spec): update spec wording

* build: update jacoco version

* feat(gettransactioninfo): first erroring implementation

* fix(sonarcloud): fix sonarcloud code smell
