# api-spec/api.yaml
@@ -17,6 +17,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NewTransactionResponse'
+  /transactions/{paymentToken}:
+    get:
+      operationId: getTransactionInfo
+      parameters:
+        - in: path
+          name: paymentToken
+          schema:
+            type: string
+          required: true
+          description: Payment token associated to transaction
+      summary: Get information about a specific transaction
+      responses:
+        200:
+          description: Transaction data successfully retrieved
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TransactionInfo"
+        400:
+          description: Invalid transaction id
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        404:
+          description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
 components:
   schemas:
     RptId:
@@ -32,7 +62,7 @@ components:
         rptId:
           $ref: '#/components/schemas/RptId'
         email:
-          type: string  
+          type: string
       required:
         - rptId
         - email
@@ -59,11 +89,24 @@ components:
         authToken:
           type: string
         rptId:
-          $ref: '#/components/schemas/RptId'  
+          $ref: '#/components/schemas/RptId'
       required:
         - amount
       example:
         amount: 200
+    TransactionInfo:
+      description: Transaction data returned when querying for an existing transaction
+      allOf:
+        - $ref: "#/components/schemas/NewTransactionResponse"
+        - type: object
+          properties:
+            status:
+              $ref: "#/components/schemas/TransactionStatus"
+          required:
+           - status
+      example:
+        amount: 200
+        status: INITIALIZED
     AmountEuroCents:
       description: Amount for payments, in euro cents
       type: integer
@@ -140,6 +183,53 @@ components:
           maxLength: 25
         amount:
           $ref: '#/components/schemas/AmountEuroCents'
+    TransactionStatus:
+      type: string
+      description: Possible statuses a transaction can be in
+      enum:
+        - INITIALIZED
+    ProblemJson:
+      type: object
+      properties:
+        type:
+          type: string
+          format: uri
+          description: |-
+            An absolute URI that identifies the problem type. When dereferenced,
+            it SHOULD provide human-readable documentation for the problem type
+            (e.g., using HTML).
+          default: about:blank
+          example: https://example.com/problem/constraint-violation
+        title:
+          type: string
+          description: |-
+            A short, summary of the problem type. Written in english and readable
+            for engineers (usually not suited for non technical stakeholders and
+            not localized); example: Service Unavailable
+        status:
+          $ref: "#/components/schemas/HttpStatusCode"
+        detail:
+          type: string
+          description: |-
+            A human readable explanation specific to this occurrence of the
+            problem.
+          example: There was an error processing the request
+        instance:
+          type: string
+          format: uri
+          description: |-
+            An absolute URI that identifies the specific occurrence of the problem.
+            It may or may not yield further information if dereferenced.
+    HttpStatusCode:
+      type: integer
+      format: int32
+      description: |-
+        The HTTP status code generated by the origin server for this occurrence
+        of the problem.
+      minimum: 100
+      maximum: 600
+      exclusiveMaximum: true
+      example: 200
   requestBodies:
     NewTransactionRequest:
       required: true
