# src/main/java/it/pagopa/transactions/projections/handlers/TransactionsProjectionHandler.java
@@ -1,12 +1,12 @@
 package it.pagopa.transactions.projections.handlers;
 
+import it.pagopa.transactions.server.model.TransactionStatusDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import it.pagopa.transactions.documents.Transaction;
 import it.pagopa.transactions.repositories.TransactionsViewRepository;
 import it.pagopa.transactions.server.model.NewTransactionResponseDto;
-import it.pagopa.transactions.utils.TransactionStatus;
 import lombok.extern.slf4j.Slf4j;
 import reactor.core.publisher.Mono;
 
@@ -23,7 +23,7 @@ public class TransactionsProjectionHandler
 
 		Transaction transaction = new Transaction(data.getPaymentToken(),
 				data.getRptId(), data.getReason(),
-				data.getAmount(), TransactionStatus.TRANSACTION_INITIALIZED);
+				data.getAmount(), TransactionStatusDto.INITIALIZED);
 
 		return viewEventStoreRepository
 				.save(transaction)
